--- a/frontend/pixel-vision/src/app/start-page/start-page.component.html
+++ b/frontend/pixel-vision/src/app/start-page/start-page.component.html
@@ -1,5 +1,6 @@
 <section class="Intro center">
     <div>
+      <img src="assets/logo.jpeg" alt="PixelVisionX Logo" class="logo"  />
       <h2>Welcome to PixelVisionX</h2>
       <p>Discover the power of self-supervised learning for computer vision tasks. Our cutting-edge technology allows you to train your computer vision models faster and more accurately than ever before.</p>
       <button class="btn-excite" (click)="newProject()">New Project!</button>
