--- a/frontend/pixel-vision/src/app/new-project/new-project.component.css
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.css
@@ -282,13 +282,13 @@ h1, h3 {
   margin-right: 4px;
 }
 
+
 .button-wrapper {
-  display: flex;
-  justify-content: center;
+  width: 100%;
+  text-align: center;
+  margin-top: 1rem;
 }
 
-
-
-
-
-
+.button-wrapper button {
+  display: inline-block;
+}
