--- a/frontend/pixel-vision/src/app/new-project/new-project.component.css
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.css
@@ -93,7 +93,8 @@ input {
   flex-direction: column;
   align-items: left;
   text-align: left;
-  width: 500px;
+  min-width: 600px;
+  height: auto;
   margin-bottom: 1rem;
 }
 
@@ -283,12 +284,10 @@ h1, h3 {
 }
 
 
+/* Add this new CSS class */
 .button-wrapper {
-  width: 100%;
-  text-align: center;
-  margin-top: 1rem;
-}
-
-.button-wrapper button {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
