--- a/frontend/pixel-vision/src/app/new-project/new-project.component.css
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.css
@@ -264,18 +264,25 @@ h1, h3 {
 }
 
 .custom-card-header {
-  background-color: #f5f5f5;
+  background-color: #f4511e; /* Change the background color */
+  background-image: linear-gradient(120deg, #f4511e 0%, #ffd390 100%); /* Add a gradient */
   border-bottom: 1px solid #ccc;
   padding: 10px;
   font-weight: bold;
+  color: #ffffff; /* Change the font color to white */
 }
 
 .custom-card-body {
   padding: 20px;
+  background-color: #f5f5f5;
+  border-radius: 0 0 5px 5px; /* Add border-radius to the card body */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
 }
 
 .custom-card-title {
   margin: 0;
+  color: #2C3E50; /* Change the title color */
+  text-transform: uppercase; /* Make the title uppercase */
 }
 
 .bold-label {
