--- a/frontend/pixel-vision/src/app/new-project/new-project.component.html
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.html
@@ -54,16 +54,12 @@
                 <option value="MOCO">MOCO</option>
               </select>
             </div>
-            <!-- Submit Button -->
+            <!-- Submit and Reset Buttons -->
             <div class="button-container">
               <button type="submit" class="btn-excite">Submit Hyperparameters</button>
-            </div>
+              <button type="button" class="btn-reset" (click)="reset()">Reset</button>
+            </div>            
           </form>
-
-          <!-- Reset Button -->
-          <div class="reset-button-container">
-            <button type="button" class="btn-reset" (click)="reset()">Reset</button>
-          </div>
         </ng-container>
 
 
