--- a/frontend/pixel-vision/src/app/new-project/new-project.component.css
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: 'Arial', sans-serif;
   background-color: #f5f5f5;
@@ -31,7 +30,9 @@ input {
   border-radius: 0.25rem;
 }
 
-.btn-excite {
+.btn-excite,
+.btn-reset {
+  margin: 0 10px;
   background-color: #ff5722;
   color: #fff;
   font-size: 1rem;
@@ -43,11 +44,11 @@ input {
   border: none;
   text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
   outline: none;
-  margin-bottom: 2rem;
   text-align: center;
 }
 
-.btn-excite:hover {
+.btn-excite:hover,
+.btn-reset:hover {
   background-color: #f4511e;
   color: #fff;
   transform: scale(1.05);
@@ -64,29 +65,13 @@ input {
   overflow-x: auto;
 }
 
-.status-bar-container {
-  width: 100%;
-  height: 2rem;
-  position: relative;
-}
-
-.status-bar {
-  background-color: #ddd;
-  color: #333;
-  padding: 10px;
-  border-radius: 5px;
-  font-size: 1.2rem;
-  font-weight: bold;
-  text-align: center;
-  margin-top: 20px;
-}
-
 .button-container {
   display: flex;
   justify-content: center;
   width: 100%;
   margin-top: 1rem;
 }
+
 
 .step-container {
   display: flex;
@@ -127,7 +112,7 @@ input {
 
 .form-row select {
   width: 100%;
-  max-width: 200px; /* Set the maximum width for the select element */
+  max-width: 200px;
 }
 
 .header-container {
@@ -135,21 +120,6 @@ input {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-}
-
-.btn-reset {
-  padding: 0.5rem 1rem;
-  font-size: 0.8rem;
-  background-color: #f44336;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.btn-reset:hover {
-  background-color: #d32f2f;
 }
 
 .image-preview-container {
@@ -185,35 +155,6 @@ h1, h3 {
   width: 100%;
   margin-top: 1rem;
 }
-
-
-/* Upload Progress Bar */
-.upload-progress-bar-container {
-  width: 100%;
-  background-color: #f3f3f3;
-  position: relative;
-  height: 20px;
-  border-radius: 4px;
-}
-
-.upload-progress-bar {
-  height: 100%;
-  background-color: #4CAF50;
-  position: absolute;
-  left: 0;
-  top: 0;
-  border-radius: 4px;
-}
-
-.upload-progress-text {
-  position: absolute;
-  width: 100%;
-  text-align: center;
-  font-size: 14px;
-  color: #000;
-  font-weight: bold;
-}
-
 
 .tooltip-text {
   visibility: hidden;
