--- a/frontend/pixel-vision/src/app/new-project/new-project.component.html
+++ b/frontend/pixel-vision/src/app/new-project/new-project.component.html
@@ -69,10 +69,13 @@
             <h3>Step 3: Start Training</h3>
           </div>
 
-          <!-- Start Training Button -->
+          <!-- Start Training and Cancel Button -->
+          <!-- Submit and Reset Buttons -->
           <div class="button-container">
             <button (click)="startTraining()" class="btn-excite">Start Training</button>
-          </div>
+            <button type="button" class="btn-reset" (click)="reset()">Cancel Training</button>
+          </div>     
+          
         </div>
       </div>
     </div>
