--- a/frontend/pixel-vision/src/app/instance-segmentation/instance-segmentation.component.html
+++ b/frontend/pixel-vision/src/app/instance-segmentation/instance-segmentation.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="header-buttons">
       <button type="button" class="btn-excite btn-continue" (click)="continueProcess()">Continue</button>
-      <button type="button" class="btn-excite btn-skip" (click)="skipProcess()">Skip (Self SuperVision)</button>
+      <button type="button" class="btn-excite btn-skip" (click)="skipProcess()">Skip</button>
     </div>
     <div class="steps-container" *ngIf="showSteps">
       <div class="steps-wrapper">
